[gd_scene load_steps=6 format=3 uid="uid://ckohuc05oul4t"]

[ext_resource type="Texture2D" uid="uid://c41u0m4qt800m" path="res://Texture Resources/mouse.tres" id="1_8pvmw"]
[ext_resource type="Script" uid="uid://dcp65xyu5hw14" path="res://Scripts/root.gd" id="1_vnucn"]
[ext_resource type="Script" uid="uid://dn13hwn3dl0i6" path="res://Scripts/mouse_circle.gd" id="2_vnucn"]
[ext_resource type="Script" uid="uid://i1l548s8l378" path="res://Scripts/find_gradient.gd" id="4_c3mwy"]

[sub_resource type="LabelSettings" id="LabelSettings_o3jxj"]
font_size = 31

[node name="Root" type="Node2D"]
script = ExtResource("1_vnucn")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mouse" type="Polygon2D" parent="UI"]
scale = Vector2(10, 10)
texture = ExtResource("1_8pvmw")
texture_scale = Vector2(22, 22)
script = ExtResource("2_vnucn")

[node name="PanelContainer" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Vector Calculus Visualizer"
label_settings = SubResource("LabelSettings_o3jxj")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Create Scalar Field" type="Button" parent="UI/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Create Scalar Field"

[node name="Find Gradient" type="Button" parent="UI/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Find Gradient Field"
script = ExtResource("4_c3mwy")

[connection signal="created_scalar_field" from="." to="UI/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Find Gradient" method="_on_root_created_scalar_field"]
[connection signal="pressed" from="UI/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Create Scalar Field" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Find Gradient" to="." method="_on_find_gradient_pressed"]
